Update style.css dan tambahkan halaman contact.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Link  Social</title>
-    <link rel="webite icon" type="jpg" href="/image/pp.jpg">
+    <link rel="webite icon" type="jpg" href="/1.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
         </div>
         <div class="list">
             <div class="para">
-            <p>"Pemimpi Besarr"</p>
+            <p>"Great Dreamer"</p>
             </div>
         <div class="lise">
           <ul class="satu">
